# trial_book_m-m

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_input_generator.py  streamlit_app.py
app/: main.py
app/api/: __init__.py  artifacts.py  books.py  chapters.py  outlines.py  reviews.py
app/core/: config.py  logging.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  book.py  chapter.py  common.py  outline.py  system.py
app/schemas/: books.py
app/services/: compilation.py  imports.py  llm.py  notifications.py  research.py  storage.py  workflow.py
