[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-generation-system"
version = "0.1.0"
description = "Workflow-driven AI book generation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "streamlit>=1.39.0",
  "python-multipart>=0.0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
